tests/ui/asm/naked-asm-outside-naked-fn.stderr
error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:20:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:25:9
   |
LL |     (|| naked_asm!(""))()
   |         ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:31:9
   |
LL |         naked_asm!("");
   |         ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

